# supply-chain-squad-demo

./: .gitignore  Dockerfile  LICENSE  README.md  azure.yaml  copilot-instructions.md  package-lock.json  squad.config.ts
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: deploy.yml  scheduled-rebuild.yml  squad-ci.yml  squad-docs.yml  squad-heartbeat.yml  squad-insider-release.yml  squad-main-guard.yml  squad-preview.yml  squad-release.yml
.squad/: .first-run  config.json  decisions.md  routing.md  team.md
.squad/agents/goose/: charter.md  history.md
.squad/agents/iceman/: charter.md  history.md
.squad/agents/jester/: charter.md  history.md
.squad/agents/maverick/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/agents/viper/: charter.md  history.md
.squad/casting/: history.json  policy.json  registry.json
.squad/decisions/inbox/: goose-closet-foundation-layer.md  goose-domain-model-rewrite.md  jester-test-fixture-prep.md
.squad/identity/: now.md  wisdom.md
docs/: architecture.md  azure-deployment.md  local-development.md  squad.md
infra/: main.bicep  main.bicepparam  main.json
infra/modules/: aca.bicep  foundry.bicep  observability.bicep
scripts/: build_agents.py  evals_runner.py  red_team_runner.py  run_red_team.py  smoke_test.sh
scripts/tests/: test_evals_runner.py  test_red_team_runner.py
src/api/: pyproject.toml
src/api/app/: __init__.py  approval_signal.py  config.py  config_store.py  main.py
src/api/app/agents/: __init__.py  orchestrator.py  registry.py
src/api/app/agents/prompts/: bed-allocation.txt  bed-coordinator.txt  catalog-sourcer.txt  compliance-gate.txt  evs-tasking.txt  order-manager.txt  policy-safety.txt  predictive-capacity.txt  supply-coordinator.txt  supply-scanner.txt  transport-ops.txt
src/api/app/events/: __init__.py  event_store.py
src/api/app/messages/: __init__.py  message_store.py
src/api/app/metrics/: __init__.py  metrics_store.py
src/api/app/models/: __init__.py  entities.py  enums.py  events.py  transitions.py
src/api/app/routers/: _lock.py  approval.py  config.py  events.py  messages.py  metrics.py  scenarios.py  state.py  vision.py
src/api/app/state/: __init__.py  store.py
src/api/app/tools/: __init__.py  tool_functions.py  tool_schemas.py
src/api/tests/: conftest.py  test_config_endpoint.py  test_endpoints.py  test_event_store.py  test_metrics.py  test_models.py  test_registry.py  test_scenarios.py  test_state_store.py  test_tool_functions.py  test_transitions.py
src/ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
src/ui/src/: App.tsx  index.css
src/ui/src/hooks/: useApi.ts  useSSE.ts
src/ui/src/lib/: colors.ts
(+22 files in other folders)
