[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supply-closet-api"
version = "0.1.0"
description = "Supply Closet Replenishment — Agentic AI Demo API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "agent-framework-foundry==1.0.0",
    "azure-monitor-opentelemetry>=1.6.0",
    "azure-identity>=1.25.3",
    "aiohttp",
    "pydantic>=2.0",
    "pydantic-settings",
    "sse-starlette",
    "cryptography>=45.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
